--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "private": true,
+  "homepage": "https://github.com/BrokkrFinance/brokkr-sdk-monorepo",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
