--- a/packages/brokkr-sdk/package.json
+++ b/packages/brokkr-sdk/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
+  "homepage": "https://github.com/BrokkrFinance/brokkr-sdk-monorepo/tree/main/packages/brokkr-sdk",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
