--- a/packages/brokkr-sdk/package.json
+++ b/packages/brokkr-sdk/package.json
@@ -1,9 +1,13 @@
 {
   "name": "brokkr-sdk",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.3",
   "type": "module",
   "homepage": "https://github.com/BrokkrFinance/brokkr-sdk-monorepo/tree/main/packages/brokkr-sdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BrokkrFinance/brokkr-sdk-monorepo/tree/main/packages/brokkr-sdk"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
